--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 .match-list h3 {
     color: #1a4a8a;
     font-size: 1.2em;
@@ -46,3 +45,24 @@
     text-align: right;
 }
 /* --- Fine Blocco Partite --- */
+/* Stile Legenda Classifica */
+.legenda {
+    margin-top: 30px;
+    padding-top: 20px;
+    border-top: 2px solid #f0f0f0;
+    font-size: 0.9em;
+    color: #444;
+}
+.legenda h3 {
+    margin-top: 0;
+    color: #1a4a8a;
+    font-size: 1.2em;
+}
+.legenda p {
+    margin: 8px 0;
+}
+.legenda p strong {
+    color: #0a2f5c;
+    min-width: 35px;
+    display: inline-block;
+}
